Fixed menu collapser function.

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -195,7 +195,9 @@
 
   .collapsed-menu {
     & > i {
+      color: var(--link-color);
       cursor: pointer;
+      font-weight: bold;
     }
 
     &:hover > .sub-menu,
